picom: remove shadow + add blur
shadow false; backend glx; blur-method; blur-strength;

--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -8,7 +8,7 @@
 # unless explicitly requested using the wintypes option.
 #
 # shadow = false
-shadow = true;
+shadow = false;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
@@ -165,6 +165,8 @@ rounded-corners-exclude = [
 # blur-deviation = false
 #
 # blur-strength = 5
+blur-method = "dual_kawase"
+blur-strength = 2
 
 # Blur background of semi-transparent / ARGB windows.
 # Bad in performance, with driver-dependent behavior.
@@ -213,8 +215,8 @@ blur-background-exclude = [
 # Specify the backend to use: `xrender`, `glx`, `egl` or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-# backend = "glx"
-backend = "xrender";
+# backend = "xrender"
+backend = "glx";
 
 # Use higher precision during rendering, and apply dither when presenting the
 # rendered screen. Reduces banding artifacts, but might cause performance
