theme homework + clean up
clean up homework theme

--- a/config/awesome/themes/homework/config/kitty.conf
+++ b/config/awesome/themes/homework/config/kitty.conf
@@ -1,27 +1,13 @@
 confirm_os_window_close 2
 
-background_opacity 1
+background_opacity 0.9
 cursor_shape underline
-tab_bar_min_tabs 1
-tab_bar_style powerline
-tab_powerline_style slanted
-
-
-# vim:ft=kitty
-
-## name:     Catppuccin Kitty Latte
-## author:   Catppuccin Org
-## license:  MIT
-## upstream: https://github.com/catppuccin/kitty/blob/main/latte.conf
-## blurb:    Soothing pastel theme for the high-spirited!
-
-
 
 # The basic colors
-foreground              #828000
-background              #F9F7DB
-selection_foreground    #F9F7DB
-selection_background    #828000
+foreground              #86C0C1
+background              #FFF2E2
+selection_foreground    #FFF2E2
+selection_background    #86C0C1
 
 # Cursor colors
 cursor                  #DC8A78
@@ -40,18 +26,18 @@ wayland_titlebar_color system
 macos_titlebar_color system
 
 # Tab bar colors
-active_tab_foreground   #F9F7DB
+active_tab_foreground   #FFF2E2
 active_tab_background   #828000
 inactive_tab_foreground #4C4F69
 inactive_tab_background #EAEDD0
-tab_bar_background      #F9F7DB
+tab_bar_background      #FFF2E2
 
 # Colors for marks (marked text in the terminal)
-mark1_foreground #F9F7DB
+mark1_foreground #FFF2E2
 mark1_background #7287fD
-mark2_foreground #F9F7DB
+mark2_foreground #FFF2E2
 mark2_background #8839EF
-mark3_foreground #F9F7DB
+mark3_foreground #FFF2E2
 mark3_background #209FB5
 
 # The 16 terminal colors
