config files picom-vm and picom-animations
config files for picom in a VM and for picom fork of dccsillag (github)

--- a/config/picom/picom-animations.conf
+++ b/config/picom/picom-animations.conf
@@ -67,6 +67,25 @@ shadow-exclude = [
 
 
 #################################
+#         Animations            #
+#################################
+
+
+# Animations work with picom fork: https://github.com/dccsillag/picom/tree/implement-window-animations
+
+animations = true;
+# animation-stiffness = 180.0;
+# animation-dampening = 28.0;
+# animation-clamping = true;
+# animation-mass = 1;
+animation-for-open-window = "zoom";
+animation-for-menu-window = "slide-down";
+animation-for-transient-window = "slide-down";
+animation-for-workspace-switch-in = "slide-down";
+animation-for-workspace-switch-out = "slide-up";
+
+
+#################################
 #           Fading              #
 #################################
 
@@ -104,7 +123,7 @@ fade-out-step = 0.03;
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 0.8;
+inactive-opacity = 0.9;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
@@ -165,7 +184,8 @@ rounded-corners-exclude = [
 # blur-deviation = false
 #
 # blur-strength = 5
-blur-method = "box"
+blur-method = "dual_kawase"
+blur-strength = 2
 
 # Blur background of semi-transparent / ARGB windows.
 # Bad in performance, with driver-dependent behavior.
@@ -214,7 +234,8 @@ blur-background-exclude = [
 # Specify the backend to use: `xrender`, `glx`, `egl` or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-backend = "xrender"
+# backend = "xrender"
+backend = "glx";
 
 # Use higher precision during rendering, and apply dither when presenting the
 # rendered screen. Reduces banding artifacts, but might cause performance
@@ -222,7 +243,8 @@ backend = "xrender"
 dithered-present = false;
 
 # Enable/disable VSync.
-vsync = false
+# vsync = false
+vsync = true;
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
 # dbus = false
