--- a/config/awesome/themes/fancywork/config/tokyonight_day.conf
+++ b/config/awesome/themes/fancywork/config/tokyonight_day.conf
@@ -6,7 +6,7 @@
 ## upstream: https://github.com/folke/tokyonight.nvim/raw/main/extras/kitty/tokyonight_day.conf
 
 
-background #ffffff
+background #e1e2e7
 foreground #3760bf
 selection_background #b6bfe2
 selection_foreground #3760bf
