--- a/config/awesome/themes/rework/config/colors-kitty.conf
+++ b/config/awesome/themes/rework/config/colors-kitty.conf
@@ -1,30 +1,21 @@
-foreground         #BA9CF8
-background         #fdfafe
-background_opacity 1.0
-cursor             #BA9CF8
-
-active_tab_foreground     #fdfafe
-active_tab_background     #BA9CF8
-inactive_tab_foreground   #BA9CF8
-inactive_tab_background   #fdfafe
-
-active_border_color   #BA9CF8
-inactive_border_color #fdfafe
-bell_border_color     #E2A3F2
-
-color0       #fdfafe
-color8       #948797
-color1       #E2A3F2
-color9       #E2A3F2
-color2       #E5A1F2
-color10      #E5A1F2
-color3       #E1A4F2
-color11      #E1A4F2
-color4       #E1A4F4
-color12      #E1A4F4
-color5       #E8A0F2
-color13      #E8A0F2
-color6       #DDC5FA
-color14      #DDC5FA
-color7       #BA9CF8
-color15      #BA9CF8
+background            #202020
+foreground            #d0d0d0
+cursor                #d0d0d0
+selection_background  #303030
+color0                #151515
+color8                #505050
+color1                #ac4142
+color9                #ac4142
+color2                #7e8d50
+color10               #7e8d50
+color3                #e5b566
+color11               #e5b566
+color4                #6c99ba
+color12               #6c99ba
+color5                #9e4e85
+color13               #9e4e85
+color6                #7dd5cf
+color14               #7dd5cf
+color7                #d0d0d0
+color15               #f5f5f5
+selection_foreground #202020
